--- a/School-Magagement-master/FrontEnd/src/app/student/AddStudent/add-student/add-student.component.html
+++ b/School-Magagement-master/FrontEnd/src/app/student/AddStudent/add-student/add-student.component.html
@@ -9,7 +9,7 @@
 
     <div>
         <label>ClassId:</label>
-        <input type="text" [formControlName]="'Id'" placeholder="Enter Class ID">
+        <option type="text" [formControlName]="'Id'" placeholder="Enter Class ID"></option>
     </div>
 
     <div>
