--- a/School-Magagement-master/FrontEnd/src/app/Classes/class/class-drawer/class-drawer.component.html
+++ b/School-Magagement-master/FrontEnd/src/app/Classes/class/class-drawer/class-drawer.component.html
@@ -13,7 +13,7 @@
         <td>{{cla.id}}</td>
         <td>{{cla.class_Name}}</td>
         <td>
-            <button nz-button nzType="primary" style="float: right;" (click)="EditClass(cla)">Edit</button>
+            <button nz-button nzType="primary" style="float: right;" (click)="EditClasses(cla)">Edit</button>
             <button nz-button nzType="primary" nzDanger (click)="DeleteClass(cla)">Delete</button>
         </td>
       </tr>
