--- a/School-Magagement-master/FrontEnd/src/app/app.component.html
+++ b/School-Magagement-master/FrontEnd/src/app/app.component.html
@@ -33,7 +33,7 @@
       <div class="sidebar-logo">
         <a routerLink="/SingleStudent">
           <span nz-icon nzType="user-add" nzTheme="outline"></span>
-          <h1>Student</h1>
+          <h1>Teacher</h1>
         </a>
           
         
