--- a/School-Magagement-master/FrontEnd/src/app/student/AddStudent/add-student/add-student.component.html
+++ b/School-Magagement-master/FrontEnd/src/app/student/AddStudent/add-student/add-student.component.html
@@ -4,12 +4,17 @@
     
     <div>
         <label>Name:</label>
-        <input type="text" [formControlName]="'Name'" placeholder="Enter Name">
+        <input type="text" [formControlName]="'Name'" placeholder="Enter Name"> 
+        <div *ngIf="myForm.controls['Name']?.hasError('required')" class="required">Name is required.</div>
     </div>
 
     <div>
-        <label>ClassId:</label>
-        <input type="text" [formControlName]="'Id'" placeholder="Enter Class ID">
+        <label>Class:</label>
+        <select [formControlName]="'Id'">
+        <option *ngFor="let id of allClasses" [value]="id.id">
+            {{id.class_Name}}
+        </option>
+        </select>
     </div>
 
     <div>
@@ -20,11 +25,14 @@
     <div>
         <label>Email:</label>
         <input type="text" [formControlName]="'Email'" placeholder="Enter Email">
+        <div style="color: red;" *ngIf="myForm.get('Email')?.hasError('invalidEmail')">Email must end with '@stallion.com'
+        </div>
     </div>
 
     <div>
         <label>Password:</label>
         <input type="password" [formControlName]="'Password'" placeholder="Enter Password">
+        <div style="color: red;" *ngIf="myForm.get('Password')?.hasError('invalidPassword')">Password Must be at least 8 characters </div>
     </div>
 
     <div>
@@ -37,17 +45,9 @@
         <input type="text" [formControlName]="'Phone'" placeholder="Enter Phone">
     </div>
 
-    <button type="submit" >Save</button>
-
-    
-
+    <button type="submit" [disabled]="!myForm.valid">Save</button>
+    {{myForm.valid}}
 </form>
-
-
-
-
-
-<!-- <pre>{{getObject | json}}</pre> -->
 
 
 
