--- a/School-Magagement-master/FrontEnd/src/app/student/student-drawer/student-drawer.component.html
+++ b/School-Magagement-master/FrontEnd/src/app/student/student-drawer/student-drawer.component.html
@@ -1,26 +1,27 @@
-<nz-card style="display: flex; flex-wrap: wrap;">
-
-    
-    <button nz-button nzType="primary" (click)="openComponent()">Add Student </button>
-
-    <div nz-row>
-        <div *ngFor="let std of getObject; index as i" class="card" nz-col nzSpan="8">
-            
-            <br>
-            <h2>Roll No: {{std.studentId}}</h2>
-            <nz-card style="margin:0px; border-color: skyblue; margin-right: 250px; width: 250px;" class="nzCard">
-                <span>
-                    <p><strong>Name:</strong> {{std.studentName}}</p>
-                    <p><strong>Email:</strong>{{std.email}}</p>
-                    <p><strong>Gender:</strong>{{std.gender}}</p>
-                    <p><strong>Phone:</strong>{{std.phone}}</p>
-                </span>
-                <button nz-button nzType="primary" style="float: right;" (click)="EditStd(std)">Edit</button>
+<nz-card >
+    <input nz-input placeholder="Search Student" [(ngModel)]="singleStudent" (ngModelChange)="GetStdIdValue()">
+    <button style="margin-left: 10px;" nz-button nzType="primary" (click)="openComponent()">Add Student </button>
+    <br>
+    <br>
+    <nz-row nzGutter="16">
+      <nz-col nzSpan="24" nzSm="12" nzMd="8" nzLg="8" *ngFor="let std of getObject; index as i">
+        <nz-card style="border-color: aqua;  margin-bottom: 20px; margin-right: 0px;" class="student-card">
+          <h2 class="card-title">Roll No: {{std.studentId}}</h2>
+          <div class="card-body">
+            <p><strong>Name:</strong> {{std.studentName}}</p>
+            <p><strong>Email:</strong> {{std.email}}</p>
+            <p><strong>Gender:</strong> {{std.gender}}</p>
+            <p><strong>Phone:</strong> {{std.phone}}</p>
+          </div>
+          <div class="card-footer">
+            <button nz-button nzType="primary" style="float: right;" (click)="EditStd(std)">Edit</button>
             <button nz-button nzType="primary" nzDanger (click)="DeleteStudent(std)">Delete</button>
-            </nz-card>  
-        </div>    
-    </div>
-</nz-card>
+          </div>
+        </nz-card>
+      </nz-col>
+    </nz-row>
+  </nz-card>
+  
 
 
 
